; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_stv6110x.c_stv6110x_get_frequency.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/media/dvb/frontends/extr_stv6110x.c_stv6110x_get_frequency.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dvb_frontend = type { %struct.stv6110x_state* }
%struct.stv6110x_state = type { i32* }

@STV6110x_TNG1 = common dso_local global i64 0, align 8
@STV6110x_TNG0 = common dso_local global i64 0, align 8
@TNG1_N_DIV_11_8 = common dso_local global i32 0, align 4
@TNG0_N_DIV_7_0 = common dso_local global i32 0, align 4
@REFCLOCK_kHz = common dso_local global i32 0, align 4
@TNG1_R_DIV = common dso_local global i32 0, align 4
@TNG1_DIV4SEL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.dvb_frontend*, i32*)* @stv6110x_get_frequency to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stv6110x_get_frequency(%struct.dvb_frontend* %0, i32* %1) #0 {
  %3 = alloca %struct.dvb_frontend*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca %struct.stv6110x_state*, align 8
  store %struct.dvb_frontend* %0, %struct.dvb_frontend** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.dvb_frontend*, %struct.dvb_frontend** %3, align 8
  %7 = getelementptr inbounds %struct.dvb_frontend, %struct.dvb_frontend* %6, i32 0, i32 0
  %8 = load %struct.stv6110x_state*, %struct.stv6110x_state** %7, align 8
  store %struct.stv6110x_state* %8, %struct.stv6110x_state** %5, align 8
  %9 = load %struct.stv6110x_state*, %struct.stv6110x_state** %5, align 8
  %10 = load i64, i64* @STV6110x_TNG1, align 8
  %11 = load %struct.stv6110x_state*, %struct.stv6110x_state** %5, align 8
  %12 = getelementptr inbounds %struct.stv6110x_state, %struct.stv6110x_state* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load i64, i64* @STV6110x_TNG1, align 8
  %15 = getelementptr inbounds i32, i32* %13, i64 %14
  %16 = call i32 @stv6110x_read_reg(%struct.stv6110x_state* %9, i64 %10, i32* %15)
  %17 = load %struct.stv6110x_state*, %struct.stv6110x_state** %5, align 8
  %18 = load i64, i64* @STV6110x_TNG0, align 8
  %19 = load %struct.stv6110x_state*, %struct.stv6110x_state** %5, align 8
  %20 = getelementptr inbounds %struct.stv6110x_state, %struct.stv6110x_state* %19, i32 0, i32 0
  %21 = load i32*, i32** %20, align 8
  %22 = load i64, i64* @STV6110x_TNG0, align 8
  %23 = getelementptr inbounds i32, i32* %21, i64 %22
  %24 = call i32 @stv6110x_read_reg(%struct.stv6110x_state* %17, i64 %18, i32* %23)
  %25 = load i32, i32* @TNG1_N_DIV_11_8, align 4
  %26 = load %struct.stv6110x_state*, %struct.stv6110x_state** %5, align 8
  %27 = getelementptr inbounds %struct.stv6110x_state, %struct.stv6110x_state* %26, i32 0, i32 0
  %28 = load i32*, i32** %27, align 8
  %29 = load i64, i64* @STV6110x_TNG1, align 8
  %30 = getelementptr inbounds i32, i32* %28, i64 %29
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @STV6110x_GETFIELD(i32 %25, i32 %31)
  %33 = load i32, i32* @TNG0_N_DIV_7_0, align 4
  %34 = load %struct.stv6110x_state*, %struct.stv6110x_state** %5, align 8
  %35 = getelementptr inbounds %struct.stv6110x_state, %struct.stv6110x_state* %34, i32 0, i32 0
  %36 = load i32*, i32** %35, align 8
  %37 = load i64, i64* @STV6110x_TNG0, align 8
  %38 = getelementptr inbounds i32, i32* %36, i64 %37
  %39 = load i32, i32* %38, align 4
  %40 = call i32 @STV6110x_GETFIELD(i32 %33, i32 %39)
  %41 = call i32 @MAKEWORD16(i32 %32, i32 %40)
  %42 = load i32, i32* @REFCLOCK_kHz, align 4
  %43 = mul nsw i32 %41, %42
  %44 = load i32*, i32** %4, align 8
  store i32 %43, i32* %44, align 4
  %45 = load i32, i32* @TNG1_R_DIV, align 4
  %46 = load %struct.stv6110x_state*, %struct.stv6110x_state** %5, align 8
  %47 = getelementptr inbounds %struct.stv6110x_state, %struct.stv6110x_state* %46, i32 0, i32 0
  %48 = load i32*, i32** %47, align 8
  %49 = load i64, i64* @STV6110x_TNG1, align 8
  %50 = getelementptr inbounds i32, i32* %48, i64 %49
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @STV6110x_GETFIELD(i32 %45, i32 %51)
  %53 = load i32, i32* @TNG1_DIV4SEL, align 4
  %54 = load %struct.stv6110x_state*, %struct.stv6110x_state** %5, align 8
  %55 = getelementptr inbounds %struct.stv6110x_state, %struct.stv6110x_state* %54, i32 0, i32 0
  %56 = load i32*, i32** %55, align 8
  %57 = load i64, i64* @STV6110x_TNG1, align 8
  %58 = getelementptr inbounds i32, i32* %56, i64 %57
  %59 = load i32, i32* %58, align 4
  %60 = call i32 @STV6110x_GETFIELD(i32 %53, i32 %59)
  %61 = add nsw i32 %52, %60
  %62 = shl i32 1, %61
  %63 = load i32*, i32** %4, align 8
  %64 = load i32, i32* %63, align 4
  %65 = sdiv i32 %64, %62
  store i32 %65, i32* %63, align 4
  %66 = load i32*, i32** %4, align 8
  %67 = load i32, i32* %66, align 4
  %68 = ashr i32 %67, 2
  store i32 %68, i32* %66, align 4
  ret i32 0
}

declare dso_local i32 @stv6110x_read_reg(%struct.stv6110x_state*, i64, i32*) #1

declare dso_local i32 @MAKEWORD16(i32, i32) #1

declare dso_local i32 @STV6110x_GETFIELD(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
